--- a/AngularJS.html
+++ b/AngularJS.html
@@ -1,85 +1,159 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <title>AngularJS</title>
-        <link rel="stylesheet" type="text/css" href="css/style_AngularJS.css">
-    </head>
-    <body>
-    <div class="wrapper">
-        <header>
-            <img src="images/header_Angular.png" alt="Логотип AngularJS">
-        </header>
-        <main>
-            <aside class="global_nav">
-                <nav class="global-nav">
-                    <a href="./index.html">Home</a>
-                    <a href="./HTML5.html">HTML5</a>
-                    <a href="./CSS3.html">CSS3</a>
-                    <a href="./Bootstrap.html">Bootstrap</a>
-                    <a href="./AngularJS.html">AngularJS</a>
-                </nav>
-            </aside>
-            <div class="main">
-                <aside class="left">
+<head>
+    <meta charset="UTF-8">
+    <title>AngularJS</title>
+    <link rel="stylesheet" type="text/css" href="css/style_AngularJS.css">
+</head>
+<body>
+<div class="wrapper">
+    <header>
+        <h1>AngularJS</h1>
+        <img src="images/girl-presentation.png" alt="girl-presentation" id="header-img-1">
+    </header>
+
+    <main>
+        <aside class="global_nav">
+            <nav class="global-nav">
+                <a href="./index.html">Home</a>
+                <a href="./HTML5.html">HTML5</a>
+                <a href="./CSS3.html">CSS3</a>
+                <a href="./Bootstrap.html">Bootstrap</a>
+                <a href="./AngularJS.html">AngularJS</a>
+            </nav>
+        </aside>
+        <div class="main">
+            <aside class="left">
+                <div class="nav">
+                    <img src="images/girl-with-desk.png" alt="Девочка с табличкой" class="img-nav">
                     <nav>
-                        <a href="./index.html">Что такое AngularJS</a>
-                        <a href="./HTML5.html">Особенности AngularJS</a>
-                        <a href="./CSS3.html">AngularJS Архитектура</a>
-                        <a href="./CSS3.html">Разбираем MVC на примере магазина сэндвичей</a>
+                        <a href="#article-1">Что такое AngularJS</a>
+                        <a href="#article-2">Особенности AngularJS</a>
+                        <a href="#article-3">AngularJS Архитектура</a>
+                        <a href="#article-4">Разбираем MVC на примере магазина сэндвичей</a>
                     </nav>
-                </aside>
+                </div>
+            </aside>
 
-                <section>
-                    <article>
-                        <h2>Что такое AngularJS</h2>
-                        <p>AngularJS — это фреймворк Model-View-Controller с открытым исходным кодом, похожий на  фреймворк JavaScript .</p>
-                    <p>Angular JS, пожалуй, одна из самых популярных современных веб-фреймворков, доступных сегодня. Эта структура используется для разработки в основном одностраничных приложений. Эта структура была разработана группой разработчиков из самого Google. Благодаря чистой поддержке Google и идеям широкого форума сообщества, фреймворк всегда обновляется. Кроме того, он всегда включает в себя последние тенденции развития на рынке.</p>
-                    </article>
-                    <article>
+            <section>
+                <article id="article-1">
+                    <h2>Что такое AngularJS</h2>
+                    <div class="text">
+
+                        <p><strong>AngularJS</strong> — это фреймворк Model-View-Controller с открытым исходным кодом,
+                            похожий на фреймворк JavaScript .</p>
+                        <img src="images/girl-reads-book.png" alt="girl-reads-book">
+                        <p>Angular JS, пожалуй, одна из самых популярных современных веб-фреймворков, доступных сегодня.
+                            Эта структура используется для разработки в основном одностраничных приложений. Эта
+                            структура была разработана группой разработчиков из самого Google. Благодаря чистой
+                            поддержке Google и идеям широкого форума сообщества, фреймворк всегда обновляется. Кроме
+                            того, он всегда включает в себя последние тенденции развития на рынке.</p>
+                    </div>
+                </article>
+                <div id="article-2and3">
+                    <article id="article-2">
                         <h2>Особенности AngularJS</h2>
-                        <p>Angular обладает следующими ключевыми характеристиками, что делает его одним из мощных фреймворков на рынке. </p>
-                    <p>MVC — Фреймворк построен на известной концепции MVC (Model-View-Controller). Это шаблон дизайна, используемый во всех современных веб-приложениях. Этот шаблон основан на разделении уровня бизнес-логики, уровня данных и уровня представления на отдельные секции. Деление на различные разделы сделано так, чтобы каждый мог управляться легче.</p>
-                    <p>Привязка модели данных — вам не нужно писать специальный код для привязки данных к элементам управления HTML. Это можно сделать с помощью Angular, просто добавив несколько фрагментов кода.</p>
-                        <p>Написание меньшего количества кода — при выполнении манипуляций с DOM требовалось много JavaScript для разработки любого приложения. Но с Angular вы будете поражены меньшим количеством кода, который вам нужно написать для манипулирования DOM.</p>
-                        <p>Модульное тестирование готово — дизайнеры Google не только разработали Angular, но и разработали среду тестирования под названием «Karma», которая помогает в разработке модульных тестов для приложений AngularJS.</p>
+                        <div class="text">
+                            <p>Angular обладает следующими ключевыми характеристиками, что делает его одним из мощных
+                                фреймворков на рынке. </p>
+                            <p>Фреймворк построен на известной концепции <strong>MVC (Model-View-Controller)</strong>.
+                                Это шаблон дизайна, используемый во всех современных веб-приложениях. Этот шаблон
+                                основан на разделении уровня бизнес-логики, уровня данных и уровня представления на
+                                отдельные секции. Деление на различные разделы сделано так, чтобы каждый мог управляться
+                                легче.</p>
+
+                            <p>Привязка модели данных — вам не нужно писать специальный код для привязки данных к
+                                элементам управления HTML. Это можно сделать с помощью Angular, просто добавив несколько
+                                фрагментов кода.</p>
+                            <img src="images/girl-with-tablet.png" alt="girl-with-tablet">
+                            <p>Написание меньшего количества кода — при выполнении манипуляций с DOM требовалось много
+                                JavaScript для разработки любого приложения. Но с Angular вы будете поражены меньшим
+                                количеством кода, который вам нужно написать для манипулирования DOM.</p>
+                            <p>Модульное тестирование готово — дизайнеры Google не только разработали Angular, но и
+                                разработали среду тестирования под названием «Karma», которая помогает в разработке
+                                модульных тестов для приложений AngularJS.</p>
+                        </div>
+
                     </article>
-                    <article>
+                    <article id="article-3">
                         <h2>AngularJS Архитектура</h2>
-                        <p>Angular.js следует архитектуре MVC, схеме MVC, как показано ниже. </p>
-                        <img src="images/MVC-model.png" alt="Диаграмма архитектуры Angularjs">
-                        <p>MVC расшифровывается как «модель-представление-контроллер» (от англ. model-view-controller). Это способ организации кода, который предполагает выделение блоков, отвечающих за решение разных задач. Один блок отвечает за данные приложения, другой отвечает за внешний вид, а третий контролирует работу приложения.</p>
-                    <p>Компоненты MVC:
-                        <ul>
-                    <li>Модель — этот компонент отвечает за данные, а также определяет структуру приложения. Например, если вы создаете To-Do приложение, код компонента model будет определять список задач и отдельные задачи. </li>
-                        <li>Представление — этот компонент отвечает за взаимодействие с пользователем. То есть код компонента view определяет внешний вид приложения и способы его использования. </li>
-                        <li>Контроллер — этот компонент отвечает за связь между model и view. Код компонента controller определяет, как сайт реагирует на действия пользователя. По сути, это мозг MVC-приложения.</li>
-
-                    </ul>
-
-                    </p>
-                    </article>
-
-                    <article>
-                        <h2>Разбираем MVC на примере магазина сэндвичей</h2>
-                        <p>Представьте, что вы пришли в магазин или кафе, где можно заказать сэндвич. В меню есть бутерброды с тунцом, индейкой и ветчиной. Вы заказываете сэндвич с индейкой. Продавец понимает вас с полуслова. Он поворачивается в сторону кухни и говорит поварам, чтобы они приготовили сэндвич с индейкой. </p>
-                        <p>У поваров под рукой есть разные продукты: тунец, индейка, ветчина, сыр, листья салата и другие ингредиенты, которые добавляют в бутерброды. Они выбирают только то, что нужно для вашего сэндвича с индейкой. Вы получаете свой заказ.</p>
-                        <p>Покупку бутерброда можно описать через MVC:
+                        <div class="text">
+                            <p>Angular.js следует архитектуре MVC, схеме MVC, как показано ниже. </p>
+                            <img src="images/MVC-model.png" alt="Диаграмма архитектуры Angularjs" id="MVC-model">
+                            <p>MVC расшифровывается как «модель-представление-контроллер» (от англ.
+                                model-view-controller). Это способ организации кода, который предполагает выделение
+                                блоков, отвечающих за решение разных задач. Один блок отвечает за данные приложения,
+                                другой отвечает за внешний вид, а третий контролирует работу приложения.</p>
+                            <p>Компоненты MVC:</p>
                             <ul>
-                        <li>Модель: кухня, на которой повар делает сэндвич</li>
-                        <li>Представление: готовый бутерброд, который вы с удовольствием едите</li>
-                        <li>Контроллер: продавец или бармен, который принимает заказ и передаёт его на кухню.</li>
-                    </ul>
-                        <img src="images/MVC-cheme.jpg" alt="Схема MVC">
+                                <li><strong>Модель</strong> — этот компонент отвечает за данные, а также определяет
+                                    структуру приложения. Например, если вы создаете To-Do приложение, код компонента
+                                    model будет определять список задач и отдельные задачи.
+                                </li>
+                                <li><strong>Представление</strong> — этот компонент отвечает за взаимодействие с
+                                    пользователем. То есть код компонента view определяет внешний вид приложения и
+                                    способы его использования.
+                                </li>
+                                <li><strong>Контроллер</strong> — этот компонент отвечает за связь между model и view.
+                                    Код компонента controller определяет, как сайт реагирует на действия пользователя.
+                                    По сути, это мозг MVC-приложения.
+                                </li>
+                            </ul>
 
-                        </p>
+
+                        </div>
                     </article>
-                </section>
+                </div>
+                <article id="article-4">
+                    <h2>Разбираем MVC на примере магазина сэндвичей</h2>
+                    <div class="text">
+                        <p>Представьте, что вы пришли в магазин или кафе, где можно заказать сэндвич. В меню есть
+                            бутерброды с тунцом, индейкой и ветчиной. Вы заказываете сэндвич с индейкой. Продавец
+                            понимает вас с полуслова. Он поворачивается в сторону кухни и говорит поварам, чтобы они
+                            приготовили сэндвич с индейкой. </p>
+                        <img src="images/MVC-cheme.png" alt="Схема MVC" id="MVC-cheme">
+                        <p>У поваров под рукой есть разные продукты: тунец, индейка, ветчина, сыр, листья салата и
+                            другие ингредиенты, которые добавляют в бутерброды. Они выбирают только то, что нужно для
+                            вашего сэндвича с индейкой. Вы получаете свой заказ.</p>
+
+                        <p>Покупку бутерброда можно описать через MVC:</p>
+                        <ul>
+                            <li>Модель: кухня, на которой повар делает сэндвич</li>
+                            <li>Представление: готовый бутерброд, который вы с удовольствием едите</li>
+                            <li>Контроллер: продавец или бармен, который принимает заказ и передаёт его на кухню.</li>
+                        </ul>
+
+
+                    </div>
+                </article>
+            </section>
+        </div>
+        <a href="#top">
+            <img src="images/supergirl.png"
+                 alt="в начало"
+                 title="в начало"
+                 class="symbol-navigation">
+        </a>
+    </main>
+
+    <footer>
+        <div class="elem-footer">
+            <div id="img-foot">
+                <a href="https://moowlinresume.notion.site/4964d0794c64485fb48578b645bc898a" target="_blank">
+                    <img src="images/icon-notion.png" alt="иконка Notion" id="notion">
+                </a>
+                <a href="https://github.com/Moowlin" target="_blank">
+                    <img src="images/icon-github.png" alt="иконка Github" id="github">
+                </a>
             </div>
-        </main>
-        <footer>
-            <p>FOOTER</p>
-        </footer>
-    </div>
-    </body>
+            <div id="text">
+                <p>JKTV22</p>
+                <p>Nizhegorodtseva Olga</p>
+            </div>
+        </div>
+
+        <img src="images/girl3.png" alt="girl-with-laptop" id="girl">
+    </footer>
+</div>
+</body>
 </html>
