--- a/HTML5.html
+++ b/HTML5.html
@@ -10,7 +10,8 @@
 <body>
 <div class="wrapper">
     <header>
-        <img src="images/header_HTML5.png" alt="Логотип HTML5">
+        <h1>HTML5</h1>
+        <img src="images/girl-presentation.png" alt="girl-presentation" id="header-img-1">
     </header>
 
     <main>
@@ -42,14 +43,14 @@
                     <h2>Что такое HTML</h2>
                     <img src="images/girl-with-question.png" alt="Рисунок мужчина с вопросом">
                     <div class="text">
-                        <p>HTML (HyperText Markup Language) представляет язык разметки гипертекста, используемый
-                            преимущественно для создания документов в сети интернет. HTML начал свой путь в начале 90-х
-                            годов как примитивный язык для создания веб-страниц, и в настоящий момент уже трудно
-                            представить
-                            себе интернет без HTML. Подавляющее большинство сайтов так или иначе используют HTML.</p>
+                        <p><strong>HTML (HyperText Markup Language)</strong> представляет язык разметки гипертекста,
+                            используемый преимущественно для создания документов в сети интернет. HTML начал свой путь в
+                            начале 90-х годов как примитивный язык для создания веб-страниц, и в настоящий момент уже
+                            трудно представить себе интернет без HTML. Подавляющее большинство сайтов так или иначе
+                            используют HTML.</p>
                         <p>В 2014 году официально была завершена работа над новым стандартом - HTML5, который фактически
                             произвел революцию, привнеся в HTML много нового.</p>
-                        <p>Что именно привнес HTML5?</p>
+                        <p><strong>Что именно привнес HTML5?</strong></p>
                         <ul>
                             <li>HTML5 определяет новый алгоритм парсинга для создания структуры DOM</li>
                             <li>добавление новых элементов и тегов, как например, элементы video, audio и ряд других
@@ -65,18 +66,20 @@
                     <div class="text">
                         <p>Основными частями элемента являются:</p>
                         <ol>
-                            <li>Открывающий тег: Он состоит из названия (обозначения) элемента (в нашем случае, p),
-                                помещённого внутри угловых скобок. Данный тег служит признаком начала элемента, с этого
-                                момента тег начинает влиять на следующее после него содержимое.
+                            <li><strong>Открывающий тег</strong>: Он состоит из названия (обозначения) элемента (в нашем
+                                случае, p), помещённого внутри угловых скобок. Данный тег служит признаком начала
+                                элемента, с этого момента тег начинает влиять на следующее после него содержимое.
                             </li>
-                            <li>Закрывающий тег: выглядит как и открывающий, но содержит слеш перед названием тега. Он
-                                служит признаком конца элемента. Пропуски закрывающих тегов — типичная ошибка новичков,
-                                которая может приводить к неопределённым результатам — в лучшем случае всё сработает
-                                правильно, в других страница может вовсе не прорисоваться или прорисоваться не как
-                                ожидалось.
+                            <li><strong>Закрывающий тег</strong>: выглядит как и открывающий, но содержит слеш перед
+                                названием тега. Он служит признаком конца элемента. Пропуски закрывающих тегов —
+                                типичная ошибка новичков, которая может приводить к неопределённым результатам — в
+                                лучшем случае всё сработает правильно, в других страница может вовсе не прорисоваться
+                                или прорисоваться не как ожидалось.
                             </li>
-                            <li>Содержимое: Как видно, в нашем случае содержимым является простой текст.</li>
-                            <li>Элемент: открывающий тег + закрывающий тег + содержимое = элемент.</li>
+                            <li><strong>Содержимое</strong>: Как видно, в нашем случае содержимым является простой
+                                текст.
+                            </li>
+                            <li><strong>Элемент</strong>: открывающий тег + закрывающий тег + содержимое = элемент.</li>
                         </ol>
 
                     </div>
@@ -87,20 +90,16 @@
                              class="img-attribute">
                         <p>Атрибуты содержат дополнительную информацию об элементе, которая, по вашему мнению, не должна
                             отображаться в содержимом элемента. В данном случае атрибут class позволяет вам дать
-                            элементу
-                            идентификационное имя, которое в дальнейшем может быть использовано для обращения к элементу
-                            с
-                            информацией о стиле и прочими вещами.</p>
-                        <p>Атрибут должен иметь:</p>
+                            элементу идентификационное имя, которое в дальнейшем может быть использовано для обращения к
+                            элементу с информацией о стиле и прочими вещами.</p>
+                        <p><strong>Атрибут должен иметь:</strong></p>
                         <ol>
                             <li>Пробел между атрибутом и именем элемента (или предыдущим атрибутом, если у элемента уже
-                                есть
-                                один или несколько атрибутов).
+                                есть один или несколько атрибутов).
                             </li>
                             <li>Имя атрибута и следующий за ним знак равенства.</li>
                             <li>Значение атрибута, заключённое в кавычки.</li>
                         </ol>
-
                     </div>
                 </article>
 
@@ -108,27 +107,22 @@
                     <h2>Структура документа HTML5</h2>
                     <div class="text">
                         <p>Каждый HTML документ, отвечающий спецификации HTML какой-либо версии, обязан начинаться со
-                            строки
-                            декларации версии HTML, делается это с помощью объявления &lt;!DOCTYPE&gt;- доктайп . </p>
+                            строки декларации версии HTML, делается это с помощью объявления &lt;!DOCTYPE&gt;- доктайп
+                            . </p>
                         <img src="images/example-code.PNG" alt="пример кода" class="img1">
                         <p>Для создания документа HTML5 нам нужны в первую очередь два элемента: DOCTYPE и html. Элемент
-                            doctype или Document Type Declaration сообщает веб-браузеру тип документа.
-                            &lt;!DOCTYPE html&gt; указывает, что данный документ является документом html и что
-                            используется
-                            html5, а не html4 или какая-то другая версия языка разметки.
-                        </p>
+                            doctype или Document Type Declaration сообщает веб-браузеру тип документа.&lt;!DOCTYPE html&gt;
+                            указывает, что данный документ является документом html и что используется html5, а не html4
+                            или какая-то другая версия языка разметки.</p>
                         <p>А элемент html между своим открывающим и закрывающим тегами содержит все содержимое
-                            документа.
-                        </p>
+                            документа.</p>
                         <p>Внутри элемента html мы можем разместить два других элемента: head и body. Элемент head
-                            содержит
-                            метаданные веб-страницы - заголовок веб-страницы, тип кодировки и т.д., а также ссылки на
-                            внешние ресурсы - стили, скрипты, если они использутся. Элемент body собственно определяет
-                            содержимое html-страницы.</p>
+                            содержит метаданные веб-страницы - заголовок веб-страницы, тип кодировки и т.д., а также
+                            ссылки на внешние ресурсы - стили, скрипты, если они использутся. Элемент body собственно
+                            определяет содержимое html-страницы.</p>
                         <p>Элементы, находящиеся внутри элемента &lt;html&gt;, образуют дерево документа, так называемую
-                            объектную модель документа, DOM (document object model). При этом элемент &lt;html&gt;
-                            является
-                            корневым элементом.</p>
+                            объектную модель документа, <strong>DOM (document object model)</strong>. При этом элемент
+                            &lt;html&gt;является корневым элементом.</p>
                         <img src="images/DOM.png" alt="Пример простейшей структуры веб-страницы">
                     </div>
                 </article>
