--- a/index.html
+++ b/index.html
@@ -6,85 +6,109 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <header>
-            <div class="logo-left">
-                <img class="Logo-header" src="images/HTML5_logo.png" alt="Логотип HTML5">
-                <img class="Logo-header" src="images/CSS3_logo.png" alt="Логотип CSS3">
-            </div>
-        
-            <h1 class="header">Разработка <br> веб-приложений</h1>
-            <div class="logo-right">
-                <img class="Logo-header" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
-                <img class="Logo-header" src="images/Angular_logo.png" alt="Логотип Angular">
-            </div>
+<div class="wrapper">
+    <header>
+        <div class="logo-left">
+            <a href="HTML5.html"> <img class="Logo-header" src="images/HTML5_logo.png" alt="Логотип HTML5"></a>
+            <a href="CSS3.html"> <img class="Logo-header" src="images/CSS3_logo.png" alt="Логотип CSS3"></a>
+        </div>
 
-        </header>
-        <main>
-            <aside class="left">
-                <nav>
-                    <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./HTML5.html">HTML5</a></li>
-                        <li><a href="./CSS3.html">CSS3</a></li>
-                        <li><a href="./Bootstrap.html">Bootstrap</a></li>
-                        <li><a href="./AngularJS.html">AngularJS</a></li>
-                    </ul>
-                </nav>
-            </aside>
-            <section>
-                <h3>Клиентская часть</h3>
-                <div class="articles">
-                    <div class="line-1">
-                        <article>
-                                <h4 class="header-article">HTML</h4>
-                                <img class="logo-article" src="images/HTML5_logo.png" alt="Логотип HTML5">
-                                <strong class="HTML">HTML5</strong> (англ. HyperText Markup Language, version 5) - язык для структурирования и предствления содержимого всемирной паутины. Эта пятая версия HTML. Хотя стандарт был завершён (рекомендованная версия к использованию) только в 2014 году. <a href="https://metanit.com/web/html5/1.1.php" target="_blank">Читать далее</a>
-                        </article>
-                        <article>
-                                <h4 class="header-article">CSS</h4>
-                                <img class="logo-article" src="images/CSS3_logo.png" alt="Логотип CSS3">
-                                <strong class="CSS">CSS</strong> (англ. Cascading Style Sheets - каскадные таблицы стилей) - формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Используется как средство описания, оформления внешнего вида веб-страниц, написанных с помощью языка разметки HTML. <a href="https://metanit.com/web/html5/5.1.php" target="_blank">Читать далее</a>
-                        </article>
-                    </div>
-                    <div class="line-2">
-                        <article>
-                                <h4 class="header-article">Bootstrap</h4>
-                                <img class="logo-article" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
-                                <strong class="Bootstrap">BOOTSTRAP</strong> (также известен как Twitter Bootstrap) - свободный набор инструментов для создания сайтов и веб-приложений. Включает в себя HTML и CSS шаблоны оформления для типографики, веб-форм, кнопок, меток, блоков навигации и прочих компонентов веб-интерфейса, включая JavaScript-расширения. <a href="https://bootstrap-5.ru/docs/5.2/getting-started/introduction/ target="_blank">Читать далее</a>>
-                        </article>
-                        <article>
-                                <h4 class="header-article">AngularJS</h4>
-                                <img class="logo-article" src="images/Angular_logo.png" alt="Логотип Angular">
-                                <strong class="AngularJS">AngularJS</strong> - JavaScript-фреймворк с открытым исходным кодом. Предназначен для разработки одностраничных приложений. Его цель - расширение браузерных приложений на основе MVC шаблона, а также упрощения тестирования и разработки. <a href="https://metanit.com/web/angular/" target="_blank">Читать далее</a>
-                        </article>
-                    </div>
+        <h1 class="header">Разработка <br> веб-приложений</h1>
+        <div class="logo-right">
+            <a href="Bootstrap.html"> <img class="Logo-header" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap"></a>
+            <a href="AngularJS.html"> <img class="Logo-header" src="images/Angular_logo.png" alt="Логотип Angular"></a>
+        </div>
+
+    </header>
+    <main>
+        <aside class="left">
+            <nav>
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./HTML5.html">HTML5</a></li>
+                    <li><a href="./CSS3.html">CSS3</a></li>
+                    <li><a href="./Bootstrap.html">Bootstrap</a></li>
+                    <li><a href="./AngularJS.html">AngularJS</a></li>
+                </ul>
+            </nav>
+        </aside>
+        <section>
+            <h3>Клиентская часть</h3>
+            <div class="articles">
+                <div class="line-1">
+                    <article>
+                        <h4 class="header-article">HTML</h4>
+                        <img class="logo-article" src="images/HTML5_logo.png" alt="Логотип HTML5">
+                        <strong class="HTML">HTML5</strong> (англ. HyperText Markup Language, version 5) - язык для
+                        структурирования и предствления содержимого всемирной паутины. Эта пятая версия HTML. Хотя
+                        стандарт был завершён (рекомендованная версия к использованию) только в 2014 году. <a
+                            href="https://metanit.com/web/html5/1.1.php" target="_blank">Читать далее</a>
+                    </article>
+                    <article>
+                        <h4 class="header-article">CSS</h4>
+                        <img class="logo-article" src="images/CSS3_logo.png" alt="Логотип CSS3">
+                        <strong class="CSS">CSS</strong> (англ. Cascading Style Sheets - каскадные таблицы стилей) -
+                        формальный язык описания внешнего вида документа, написанного с использованием языка разметки.
+                        Используется как средство описания, оформления внешнего вида веб-страниц, написанных с помощью
+                        языка разметки HTML. <a href="https://metanit.com/web/html5/5.1.php" target="_blank">Читать
+                        далее</a>
+                    </article>
                 </div>
-                <p class="border">
-                    В настоящее время "Искусственный интеллект" покинул сферу научно-фантастических технологий и уверенно вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как Facebook, Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и сделали все возможное для частичной интеграции технологий искусственного интеллекта на своих площадках.
+                <div class="line-2">
+                    <article>
+                        <h4 class="header-article">Bootstrap</h4>
+                        <img class="logo-article" src="images/Bootstrap_logo.png" alt="Логотип Bootstrap">
+                        <strong class="Bootstrap">BOOTSTRAP</strong> (также известен как Twitter Bootstrap) - свободный
+                        набор инструментов для создания сайтов и веб-приложений. Включает в себя HTML и CSS шаблоны
+                        оформления для типографики, веб-форм, кнопок, меток, блоков навигации и прочих компонентов
+                        веб-интерфейса, включая JavaScript-расширения. <a
+                            href="https://bootstrap-5.ru/docs/5.2/getting-started/introduction/" target="_blank">Читать
+                        далее</a>>
+                    </article>
+                    <article>
+                        <h4 class="header-article">AngularJS</h4>
+                        <img class="logo-article" src="images/Angular_logo.png" alt="Логотип Angular">
+                        <strong class="AngularJS">AngularJS</strong> - JavaScript-фреймворк с открытым исходным кодом.
+                        Предназначен для разработки одностраничных приложений. Его цель - расширение браузерных
+                        приложений на основе MVC шаблона, а также упрощения тестирования и разработки. <a
+                            href="https://metanit.com/web/angular/" target="_blank">Читать далее</a>
+                    </article>
+                </div>
+            </div>
+            <p class="border">
+                В настоящее время "Искусственный интеллект" покинул сферу научно-фантастических технологий и уверенно
+                вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как Facebook,
+                Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и сделали все
+                возможное для частичной интеграции технологий искусственного интеллекта на своих площадках.
+            </p>
+        </section>
+        <aside class="right">
+            <h3 class="news">Новости</h3>
+            <article class="news">
+                <h4 class='header-news'>Progressive Wep Apps</h4>
+                <p class="news">
+                    В последнее время популярность нативных мобильных приложений превзошла всу ожидания. Прогрессивные
+                    веб-приложения нового поколения (PWA) собрали информацию о лучшем пользовательском опыте и воплотили
+                    это в мобильны приложениях.
                 </p>
-            </section>
-            <aside class="right">
-                <h3 class="news">Новости</h3>
-                <article class="news">
-                    <h4 class='header-news'>Progressive Wep Apps</h4>
-                    <p class="news">
-                        В последнее время популярность нативных мобильных приложений превзошла всу ожидания. Прогрессивные веб-приложения нового поколения (PWA) собрали информацию о лучшем пользовательском опыте и воплотили это в мобильны приложениях.
-                    </p>
-                </article>
-                <article class="news">
-                    <h4 class='header-news'>Чат боты</h4>
-                    <p class="news">
-                        В настоящее время "Искусственный интеллект" покинул сферу научно-фантастических технологий и уверенно вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как Facebook, Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и сделали все возможное для частичной интеграции технологий искусственного интеллекта на своих площадках.
-                    </p>
-                </article>
-            </aside>
-        </main>
-        <footer>
-            <p class="footer">Дата создания: 2022-11-18</p>
-            <p class="footer">KutseHaridusKeskus JKTV22</p>
-            <p class="footer">Nizhegorodtseva Olga</p>
-        </footer>
-    </div>
+            </article>
+            <article class="news">
+                <h4 class='header-news'>Чат боты</h4>
+                <p class="news">
+                    В настоящее время "Искусственный интеллект" покинул сферу научно-фантастических технологий и
+                    уверенно вошел в число 10 лучших трендов веб разработки в 2020 году. Крупные компании, такие как
+                    Facebook, Google, Microsoft, IBM и Amazon, увидели перспективы для инвестиций в развитие ИИ и
+                    сделали все возможное для частичной интеграции технологий искусственного интеллекта на своих
+                    площадках.
+                </p>
+            </article>
+        </aside>
+    </main>
+    <footer>
+        <p class="footer">Дата создания: 2022-11-18</p>
+        <p class="footer">KutseHaridusKeskus JKTV22</p>
+        <p class="footer">Nizhegorodtseva Olga</p>
+    </footer>
+</div>
 </body>
 </html>
